nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx  
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8083 #Cluster IP Level
      targetPort: 80
      nodePort: 31000  #External Port
