postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres  
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - port: 5432
