tenant-clusterservice.yml
apiVersion: v1
kind: Service
metadata:
  name: tenant-service-clusterip
  labels:
    app: tenants  
spec:
  selector:
    app: tenants
  ports:
    - protocol: TCP
      port: 8085 # this is the port for other in the cluster to talk to me
      targetPort: 80 # this is the port from the deployment and what the pods are exposed on
