k8ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
        - path: /foo
          pathType: Prefix
          backend:
            service:
             name: bs-service
             port:
                number: 8085
