tenant-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
spec:
  rules:
  - host: foo.bar.com # add this entry to your host file - 127.0.0.1 foo.bar.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
             name: tenant-service-clusterip # this is name of the service
             port:
                number: 8085 # this is the service's cluster port exposed to be talked to a lot
